# mobileproject

./: README.md  build.sh  manage.py  pyproject.toml  render.yaml
mobillo/: asgi.py  settings.py  urls.py  wsgi.py
web/: admin.py  forms.py  models.py  urls.py  views.py
web/management/commands/: seed.py
web/migrations/: 0001_initial.py  0002_mobile_mobileimage.py
web/templates/: base.html
web/templates/web/: contact.html  index.html  login.html  mobile_detail.html  mobiles.html  signup.html
